test/parse/expr/bad-callindirect-empty.txt
;;; ERROR: 1
(module
  (type $t (func (param i32 i32)))
  (func
    (call_indirect $t)))
(;; STDERR ;;;
parse/expr/bad-callindirect-empty.txt:5:22: syntax error, unexpected ), expecting (
;;; STDERR ;;)
